force-app/main/default/objects/Epico__c/fields/Descricao__c.field-meta.xml
<CustomField>
    <fullName>Descricao__c</fullName>
    <description>Descrição do Épico</description>
    <label>Descrição</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>