force-app/main/default/objects/Epico__c/fields/Nome_Completo__c.field-meta.xml
<CustomField>
    <fullName>Nome_Completo__c</fullName>
    <formula>Name  &amp; &apos; - &apos; &amp; Descricao__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome Completo</label>
    <type>Text</type>
</CustomField>