force-app/main/default/objects/Epico__c/fields/Teste_caminho__c.field-meta.xml
<CustomField>
    <fullName>Teste_caminho__c</fullName>
    <label>Teste caminho</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não iniciado</fullName>
            </value>
            <value>
                <fullName>Em execução</fullName>
            </value>
            <value>
                <fullName>Finalizado</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>